# espelho

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
alternative-designs/position/: CMakeLists.txt  README.txt  id.h  main.cpp  position.h
examples/position/: CMakeLists.txt  main.cpp  position.h
include/: config.h  espelho.h  health.h  packet_reader.h  packet_writer.h  position.h  replicable.h  sequence.h  stream.h  type_registry.h
src/: espelho.cpp  main.cpp  packet_reader.cpp  packet_writer.cpp  type_registry.cpp
test/: CMakeLists.txt  packet_test.cpp  replicable_test.cpp  stream_test.cpp
